# RAG

./: .gitignore  DESIGN_DECISIONS.md  LICENSE  pyproject.toml  requirements.txt
data/processed/: chunks.jsonl
data/samples/: mini_chunks.jsonl  mini_grounding_map_validation_chunks.jsonl
scripts/: 00_fetch_doc2dial.py  01_ingest_doc2dial.py  02_build_grounding_map.py  03_chunk_docs.py  04_map_gold_to_chunks.py  05_bm25_retrieve.py  06_eval_retrieval.py  07_ab_bm25_variants.py  99_make_stratified_sample.py
src/raglab/: cli.py
src/raglab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/raglab/analysis/: failures.py
src/raglab/chunking/: chunkers.py
src/raglab/data/: loaders.py
src/raglab/evals/: calibration.py  retrieval.py
src/raglab/indexing/: bm25.py  dense_openai.py
src/raglab/ingestion/: doc2dial.py
src/raglab/utils/: io.py  run_artifacts.py
tests/: test_runner_sample.py
