[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raglab"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
  "rank-bm25>=0.2.2",
  "numpy>=1.26",
  "pandas>=2.0",
  "pyyaml>=6.0",
  "typer>=0.12",
  "rich>=13.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
raglab = "raglab.cli:app"
